# mantle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Swia/: CMakeLists.txt  Package.swift  README.md
Swia/Sources/CSkia/include/: CSkia.h  module.modulemap
Swia/Sources/Demo/: ContentView.swift
Swia/Sources/Swia/types/: Canvas.swift  ColorInfo.swift  ImageInfo.swift  SkColor.swift  SkPath.swift  Surface.swift
Swia/Tests/swiaTests/: swiaTests.swift
app/apple/MantlEDA/: CanvasView.swift  ContentView.swift  MantledaApp.swift  SketchManager.swift
cskia/: CMakeLists.txt
cskia/include/: sk_canvas.h  sk_imageinfo.h  sk_matrix.h  sk_paint.h  sk_path.h  sk_surface.h  sk_types.h
cskia/src/: sk_canvas.cc  sk_imageinfo.cc  sk_paint.cc  sk_path.cc  sk_surface.cc  sk_types_priv.h
lib/: CMakeLists.txt
lib/skia/: CMakeLists.txt  skia_cmd.sh.in
projects/xcode/MantlEDA/MantlEDA.xcodeproj/: project.pbxproj
projects/xcode/MantlEDA/MantlEDA.xcodeproj/xcshareddata/xcschemes/: MantlEDA.xcscheme
projects/xcode/mantleda.xcworkspace/: contents.xcworkspacedata
